[tool.poetry]
name = "codec"
version = "0.1.0"
description = ""
authors = ["romashorodok <108732029+romashorodok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lhotse = "^1.27.0"
pandas = "^2.2.2"
scipy = "^1.14.1"
unidecode = "^1.3.8"
phonemizer = "^3.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
